P4PADEV-1777 rest api for upload paymentReporting and soap invocation of nodoPagoPa
