# src/main/java/it/gov/pagopa/pu/pagopapayments/controller/PaymentsReportingController.java
@@ -7,6 +7,7 @@ import it.gov.pagopa.pu.pagopapayments.util.SecurityUtils;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
@@ -28,6 +29,11 @@ public class PaymentsReportingController implements PaymentsReportingApi {
     return ResponseEntity.ok(reportingList);
   }
 
-
+  @Override
+  public ResponseEntity<String> uploadOfPaymentReporting(@PathVariable Long organizationId, @RequestParam String fileName, @RequestParam String flowId){
+    log.info("invoking uploadPaymentsReporting, organizationId[{}], fileName[{}], flowId[{}]", organizationId, fileName, flowId);
+    String result = paymentsReportingService.uploadPaymentsReporting(organizationId, flowId, fileName, SecurityUtils.getAccessToken());
+    return ResponseEntity.ok(result);
+  }
 
 }
